The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

### Changed

### Deprecated

### Removed

### Fixed

### Security

## [23.10] 2023-10-26

### Added

* IS_MINIFW: better detection of minifirewall status
* IS_OLDPUB: pub.evolix.net has been supersed by pub.evolix.org since Stretch
* IS_NEWPUB: verify that the new public repository is present
* IS_DRBDTWOPRIMARIES: check there are not 2 DRBD primaries at the same time.
* IS_SURY: check that if sury is enabled, then a safeguard must be in place

### Changed

* IS_BACKPORTSCONF: does not require preferences anymore

### Fixed

* IS_BINDCHROOT: fix /etc/default path for Debian >= 11 (renamed from bind9 to named)
* IS_EVOBACKUP_EXCLUDE_MOUNT: adapt to new version of evobackup (#148)

## [23.07] 2023-07-07

### Fixed
* IS_REDIS_BACKUP: full rewrite of the check to be more flexible, and also check time of dump.

## [23.04.01] 2023-04-07

### Fixed
* IS_POSTFIX_MYDESTINATION: fix regex not working (again).

## [23.04] 2023-04-07

### Changed
* IS_LOCALHOST_IN_POSTFIX_MYDESTINATION: renamed to IS_POSTFIX_MYDESTINATION

### Fixed
* IS_POSTFIX_MYDESTINATION: fix regex not working.

## [23.03.01] 2023-03-01

### Fixed
* Fix version number.

## [23.03] 2023-03-01

### Added

* Log output and runtime config to /var/log/evocheck.log.

### Changed

### Deprecated

### Removed

### Fixed
* IS_LOCALHOST_IN_POSTFIX_MYDESTINATION: set grep quiet.
* IS_LXC_PHP_FPM_SERVICE_UMASK_SET: fix inverted test condition.

### Security

## [23.02] 2023-02-10

### Fixed

* Release with the correct version number.

## [22.12] 2023-02-10

### Added

New checks :

* IS_LOCALHOST_IN_POSTFIX_MYDESTINATION
* IS_SSH_FAIL2BAN_JAIL_RENAMED
* IS_NO_LXC_CONTAINER
* IS_LXC_PHP_FPM_SERVICE_UMASK_SET

### Changed

* Use bash array for tmp files to cleanup.

### Fixed

* IS_EVOBACKUP_INCS: fix quote.