@@ -5,6 +5,8 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Added
 
+* trixie and forky support (Debian 13, 14)
+
 ### Changed
 
 ### Deprecated
